
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  ${PROJECT_SOURCE_DIR}/include/type
  ${PROJECT_SOURCE_DIR}/include/dtpg
  ${YM_SUBMODULE_INCLUDE_LIST}
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( types )
add_subdirectory ( fsim )
add_subdirectory ( dtpg )
add_subdirectory ( minpat )
add_subdirectory ( classify )
add_subdirectory ( bist )
add_subdirectory ( py_capi )


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
# ターゲットの設定
# ===================================================================


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
