
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( types )
add_subdirectory ( fsim )
add_subdirectory ( dtpg )
add_subdirectory ( reducer )
#add_subdirectory ( condgen )
#add_subdirectory ( minpat )
add_subdirectory ( classify )
add_subdirectory ( bist )


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
# ターゲットの設定
# ===================================================================


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
