

# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================
add_subdirectory( pytest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  executable ターゲットの設定
# ===================================================================


# ===================================================================
# インストールターゲット
# ===================================================================


# ===================================================================
# テストターゲット
# ===================================================================
