
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${PROJECT_SOURCE_DIR}/include/dtpg
  ${PROJECT_SOURCE_DIR}/include/main
  ${PROJECT_SOURCE_DIR}/include/fsim
  ${PROJECT_SOURCE_DIR}/include/types
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( test-programs )


# ===================================================================
# テストターゲットの定義
# ===================================================================
